--- a/tests/index.html
+++ b/tests/index.html
@@ -21,7 +21,7 @@
   <body>
     {{content-for "body"}}
     {{content-for "test-body"}}
-
+    <div class='hi'></div>
     <script src="testem.js" integrity=""></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
